--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,6 +6,10 @@
     "version":     "1.0",
     "author":      "Mike Rosulek",
 
+    "icons": {
+        "128": "icon128.png"
+    },
+
     "browser_action": {
         "default_icon":  "icon.png",
         "default_popup": "popup.html"
