simplify page injection, populate notes with selected page text, make note of existing clipper plugin

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
 
-    "name":        "Clip to WorkFlowy",
+    "name":        "WorkFlowy Clipper",
     "description": "Quickly save a bookmark or jot down a quick note into a particular WorkFlowy list",
     "version":     "1.0",
     "author":      "Mike Rosulek",
@@ -23,5 +23,4 @@
     "background": {
         "scripts": ["background.js"]
     }
-
 }
